--- a/Anime.html
+++ b/Anime.html
@@ -159,7 +159,7 @@
         <h1>MoviesNation</h1>
         <div id="menu" >
             <ul> 
-                    <li><a href="MoviesHub.html">HOME</a></li>
+                    <li><a href="index.html">HOME</a></li>
                     <li><a href="Anime.html"> ANIME</a></li>
                     <li><a href="#">SERIES</a></li>
                     <li><a href="MoviesHub.html">MOVIES</a></li>
