--- a/year.html
+++ b/year.html
@@ -109,10 +109,10 @@
     <h1>MoviesNation</h1>
     <table> 
             <tr>
-                <th><a href="#">HOME</a></th>
+                <th><a href="index.html">HOME</a></th>
                 <th><a href="Anime.html" target="_blank"> ANIME</a></th>
                 <th><a href="#">SERIES</a></th>
-                <th><a href="MoviesHub.html">MOVIES</a></th>
+                <th><a href="index.html">MOVIES</a></th>
                 <th><a href="#">GENRE</a></th>
                 <th><a href="year.html" target="_blank">YEAR</a></th>
                 <th><a href="#">QUALITY</a></th>
